--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libfoo"]
-	path = themes/PaperMod
+[submodule "PaperMod"]
 	url = https://github.com/adityatelange/hugo-PaperMod.git
+	path = themes/PaperMod
