--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@ baseURL: "https://www.laroccx.com/"
 title: "LaRoccx"
 publishDir: "docs"
 languageCode: en-us
-paginate: 5
+# paginate: 5
 theme: PaperMod
 
 enableRobotsTXT: true
@@ -75,8 +75,6 @@ params:
       url: "https://github.com/robertlarocca"
     - name: linkedin
       url: "https://www.linkedin.com/in/robert-larocca-a48bb4209"
-    - name: matrix
-      url: "https://matrix.to/#/@robertlarocca:beeper.com"
     - name: twitter
       url: "https://twitter.com/robertlaroccx"
 
